<resources>
    <string name="app_name">Dia a Dia</string>
    <string name="hello_blank_fragment">Olá fragmento</string>
    <string name="login_title">Volte para o seu diário</string>
    <string name="login_subtitle">Entre para acompanhar sua rotina e suas reflexões.</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Confirmar Senha</string>
    <string name="login">Entrar</string>
    <string name="create_account_link">Ainda não tenho conta</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="message_login_success">Login realizado com sucesso</string>
    <string name="message_forgot_password_success">Um e-mail de recuperação foi enviado para você.</string>
    <string name="login_account_link">Já tenho conta</string>
    <string name="register">Criar conta</string>
    <string name="register_subtitle">Cadastre seus dados e crie seu espaço pessoal.</string>
    <string name="register_title">Criar conta</string>
    <string name="name">Nome</string>
    <string name="phone">Celular</string>
    <string name="error_name_required">Nome é obrigatório</string>
    <string name="error_phone_required">Telefone é obrigatório</string>
    <string name="error_phone_length">Telefone precisa ter pelo menos 9 dígitos</string>
    <string name="error_email_required">E-mail é obrigatório</string>
    <string name="error_password_required">Senha é obrigatória</string>
    <string name="error_password_should_be_at_least_6_characters">Senha precisa ter pelo menos 8 caracteres</string>
    <string name="error_password_should_contain_at_least_one_uppercase_letter">Senha deve conter pelo menos uma letra maiúscula, uma letra minúscula, um número e um caractere especial</string>
    <string name="error_email_not_valid">Digite um e-mail válido</string>
    <string name="error_phone_not_valid">Telefone inválido</string>
    <string name="error_password_confirm_required">Confirmar senha é obrigatório</string>
    <string name="error_password_should_be_equal">As senhas não são iguais</string>
    <string name="search_menu">Buscar</string>
    <string name="profile_menu">Editar perfil</string>
    <string name="logout_menu">Sair</string>
    <string name="contact_name">Nome do contato</string>
    <string name="contact_phone">Telefone</string>
    <string name="home_title">Minha rotina</string>
    <string name="home_greeting">Olá, %1$s</string>
    <string name="home_empty_name">escritor(a)</string>
    <string name="home_summary_title">Resumo do seu perfil</string>
    <string name="home_focus_title">Foco do dia</string>
    <string name="home_reflection_title">Reflexão registrada</string>
    <string name="home_reflections_title">Reflexões registradas</string>
    <string name="home_email_label">E-mail</string>
    <string name="home_phone_label">Celular</string>
    <string name="edit_profile_button">Criar Reflexão</string>
    <string name="profile_editor_title">Editar Perfil</string>
    <string name="profile_editor_subtitle">Atualize seus dados e mantenha seu diário organizado.</string>
    <string name="focus_hint">Qual é a prioridade do seu dia?</string>
    <string name="reflection_hint">Escreva como você está se sentindo hoje.</string>
    <string name="save_profile">Salvar perfil</string>
    <string name="message_profile_saved">Perfil salvo com sucesso.</string>
    <string name="message_profile_load_error">Não foi possível carregar os dados do perfil.</string>
    <string name="message_profile_loaded_from_device">Sem conexão com a nuvem. Exibindo dados salvos no aparelho.</string>
    <string name="message_profile_save_error">Não foi possível salvar o perfil.</string>
    <string name="message_register_success">Conta criada com sucesso.</string>
    <string name="message_register_error">Não foi possível concluir o cadastro.</string>
    <string name="message_user_not_authenticated">Usuário não autenticado.</string>
    <string name="message_invalid_email_for_reset">Informe um e-mail válido para recuperar a senha.</string>
    <string name="google_sign_in">Entrar com Google</string>
    <string name="google_sign_up">Cadastrar com Google</string>
    <string name="message_google_sign_in_success">Login com Google realizado com sucesso.</string>
    <string name="message_google_sign_in_cancelled">Login com Google cancelado.</string>
    <string name="message_google_sign_in_error">Não foi possível autenticar com o Google.</string>
    <string name="message_google_config_missing">Configuração do Google ausente. Atualize o google-services.json após cadastrar o SHA-1 no Firebase.</string>
    <string name="message_reflection_saved_locally">Reflexão salva localmente. A sincronização online falhou.</string>
    <string name="firebase_database_users_path">users</string>
    <string name="env_support_email">suporte@diaadia.app</string>
    <string name="env_default_focus">Respirar, organizar as ideias e seguir em frente.</string>
    <string name="env_default_reflection">Hoje é um bom dia para registrar pequenas vitórias.</string>
    <string name="env_app_tagline">Seu diário pessoal com autenticação e nuvem.</string>
    <string name="support_label">Suporte</string>
    <string name="reflection_photo_label">Foto</string>
    <string name="reflection_photo_hint">Toque para adicionar uma foto</string>
    <string name="reflection_photo_camera">Tirar foto</string>
    <string name="reflection_photo_gallery">Escolher da galeria</string>
    <string name="reflection_photo_choose">Adicionar foto</string>
    <string name="reflection_location_label">Localização</string>
    <string name="reflection_location_loading">Obtendo localização…</string>
    <string name="reflection_location_unavailable">Localização indisponível</string>
    <string name="reflection_location_denied">Permissão de localização negada</string>
    <string name="reflection_location_refresh">Atualizar</string>
    <string name="reflection_text_label">Sua Reflexão</string>
    <string name="reflection_save_button">Salvar Reflexão</string>
    <string name="reflection_title_create">Criar Reflexão</string>
    <string name="reflection_title_edit">Editar Reflexão</string>
    <string name="reflection_error_empty_text">A reflexão não pode estar vazia.</string>
    <string name="reflection_error_no_photo">Adicione uma foto para continuar.</string>
    <string name="reflection_error_generate_id">Erro ao gerar o identificador da reflexão.</string>
    <string name="reflection_saved_success">Reflexão salva com sucesso!</string>
    <string name="reflection_updated_success">Reflexão atualizada com sucesso!</string>
    <string name="reflection_camera_denied">Permissão de câmera negada.</string>
    <string name="home_quote_title">Frase do dia</string>
    <string name="notification_channel_name">Lembrete diário</string>
    <string name="notification_channel_description">Notificações para lembrar você de registrar sua reflexão diária.</string>
    <string name="notification_reminder_title">Hora de refletir!</string>
    <string name="notification_reminder_text">Que tal registrar como foi o seu dia? Abra o Dia a Dia e escreva sua reflexão.</string>
    <string name="settings_change_photo">Alterar foto de perfil</string>
    <string name="push_notification_default_title">Dia a Dia</string>
    <string name="push_notification_default_body">Você tem uma nova mensagem.</string>
    <string name="push_channel_name">Notificações push</string>
    <string name="push_channel_description">Notificações enviadas pelo servidor.</string>
</resources>